<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.gymdroid.MainActivity"
    android:orientation="vertical" >

    <Button
        android:id="@+id/Monday"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/monday_button"
        android:layout_weight="1"
        android:onClick="onDayClick"
        />
    <Button
        android:id="@+id/Tuesday"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/tuesday_button"
        android:onClick="onDayClick"
        />
    <Button
        android:id="@+id/Wednesday"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/wednesday_button"
        android:onClick="onDayClick"
        />
    <Button
        android:id="@+id/Thursday"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/thursday_button"
        android:onClick="onDayClick"
        />
    <Button
        android:id="@+id/Friday"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/friday_button"
        android:onClick="onDayClick"
        />

</LinearLayout>
